feat: add option pages and difficulty selection

--- a/options.css
+++ b/options.css
@@ -2,30 +2,30 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 body {
-    background-color: #dea3bc; 
-    height: 100vh;
+    background-color: #dea3bc;
+    height: 100vb;
     display: flex;
+    /* body içindeki verilerin ortalanmasını sağlar. */
     align-items: center;
     justify-content: center;
+    
 }
 
-
-.container {
+.optionas-card {
     width: 100%;
     max-width: 500px;
     padding: 20px;
 }
 
-
-.game-mood {
-    background:#ba879c;
+.options{
+    background-color: #ba879c;
     padding: 40px;
     border-radius: 12px;
-    box-shadow: 0 8px 24px ;
+    box-shadow: 0 8px 24px;
     text-align: center;
 }
 
@@ -34,7 +34,6 @@ h2 {
     margin-bottom: 25px;
     font-size: 28px;
 }
-
 
 button {
     width: 100%;
@@ -45,13 +44,13 @@ button {
     font-size: 16px;
     font-weight: 600;
     cursor: pointer;
-    transition: background-color 0.3s ease, transform 0.1s ease;
+    transition: background-color 0.3s ease, transform 0.1 ease ;
 }
 
 button:hover {
-    background-color: #0056b3; 
+    background-color: #0056b3;    
 }
 
 button:active {
-    transform: scale(0.98); 
+    transform: scale(0.98);
 }
